--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 .DS_Store
 yolov3.weights
 __pycache__
+src/cookbookCV/cookbookCV.xcodeproj/xcuserdata/shashank.xcuserdatad/xcschemes/xcschememanagement.plist
+src/cookbookCV/cookbookCV.xcworkspace/xcuserdata/shashank.xcuserdatad/UserInterfaceState.xcuserstate
+*.plist
